# f1-telemetry-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: rust.yml
f1-packet-recorder/: Cargo.toml
f1-packet-recorder/src/: main.rs  player.rs  recorder.rs  utils.rs
f1-telemetry/: Cargo.toml
f1-telemetry-common/: Cargo.toml
f1-telemetry-common/src/: logging.rs
f1-telemetry-display/: Cargo.toml
f1-telemetry-display/src/: fmt.rs  main.rs  models.rs  render.rs  ui.rs
f1-telemetry-display/src/ui/: car.rs  fmt.rs  gtk.rs  mod.rs  nc.rs  suspension.rs  weather.rs
f1-telemetry-display/src/ui/gtk/: car.rs  car_view.rs  events.rs  fmt.rs  header.rs  lap_times.rs  race_data_view.rs  style.rs  throttle_view.rs  tyre_temp.rs  tyre_temp_view.rs
f1-telemetry-display/src/ui/nc/: car.rs  fmt.rs  suspension.rs  weather.rs
f1-telemetry/src/: f1_2019.rs  f1_2020.rs  f1_2021.rs  f1_2022.rs  f1_2023.rs  lib.rs  packet.rs  utils.rs
f1-telemetry/src/f1_2019/: car_setup.rs  car_status.rs  car_telemetry.rs  consts.rs  event.rs  generic.rs  header.rs  lap.rs  motion.rs  participants.rs  session.rs
f1-telemetry/src/f1_2020/: car_setup.rs  car_status.rs  car_telemetry.rs  consts.rs  event.rs  final_classification.rs  generic.rs  header.rs  lap.rs  lobby_info.rs  motion.rs  participants.rs  session.rs
f1-telemetry/src/f1_2021/: car_damage.rs  car_setup.rs  car_status.rs  car_telemetry.rs  consts.rs  event.rs  final_classification.rs  generic.rs  header.rs  lap.rs  lobby_info.rs  motion.rs  participants.rs  session.rs  session_history.rs
f1-telemetry/src/f1_2022/: car_damage.rs  car_setup.rs  car_status.rs  car_telemetry.rs  consts.rs  event.rs  final_classification.rs  generic.rs  header.rs  lap.rs  lobby_info.rs  motion.rs  participants.rs  session.rs  session_history.rs
f1-telemetry/src/f1_2023/: car_status.rs  car_telemetry.rs  consts.rs  event.rs  final_classification.rs  generic.rs  header.rs  lap.rs  lobby_info.rs  motion.rs  motion_ex.rs  participants.rs  session.rs  session_history.rs  tyre_sets.rs
f1-telemetry/src/packet/: car_damage.rs  car_setup.rs  car_status.rs  car_telemetry.rs  event.rs  final_classification.rs  generic.rs  header.rs  lap.rs  lobby_info.rs  motion.rs  motion_ex.rs  participants.rs  session.rs  session_history.rs  tyre_sets.rs
f1-telemetry/tests/: f1_2019_packets.rs  f1_2020_packets.rs  f1_2021_packets.rs  f1_2022_packets.rs  stream.rs
f1-telemetry/tests/utils/: mod.rs
f1-ws-server/: Cargo.toml
f1-ws-server/src/: main.rs
src/: main.rs  packet.rs
src/packet/: car_setup.rs  car_status.rs  car_telemetry.rs  event.rs  generic.rs  header.rs  lap.rs  motion.rs  participants.rs  session.rs
