[package]
name = "f1-telemetry-rs"
version = "0.1.0"
authors = ["Mathieu Lemay <mathieu.lemay@broadsign.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
