[package]
name = "f1-packet-recorder"
version = "0.1.0"
description = "Utility to record and replay sessions."
authors = ["Mathieu Lemay <acidrain1@gmail.com>"]
edition = "2021"

[dependencies]
f1-telemetry = { path = "../f1-telemetry" }
f1-telemetry-common = { path = "../f1-telemetry-common" }
anyhow = "1.0.80"
clap = { version = "4.0.4", features = ["derive", "env"] }
ctrlc = "3.4.2"
log = "0.4.17"
rusqlite = { version = "0.31.0", features = ["bundled"] }
simplelog = "0.12.0"
time = "0.3.11"
