[package]
name = "f1-telemetry-display"
version = "0.1.0"
authors = ["Mathieu Lemay <acidrain1@gmail.com>"]
edition = "2018"

[dependencies]
f1-telemetry = { path = "../f1-telemetry" }
clap = "^2.33"
log = "^0.4"
simplelog = "^0.9"
ncurses = { version = "5.101", features = ["wide"] }
gtk = "^0.9"
gio = "^0.9"
glib = "^0.10"
gdk = "^0.13"
cairo-rs = { version = "^0.9.1", features = ["png"] }
