[package]
name = "f1-telemetry-display"
version = "0.1.0"
description = "Display telemetry info from F1 games"
authors = ["Mathieu Lemay <acidrain1@gmail.com>"]
edition = "2021"
default-run = "f1-telemetry-display"

[dependencies]
f1-telemetry = { path = "../f1-telemetry" }
f1-telemetry-common = { path = "../f1-telemetry-common" }
clap = { version = "4.0.4", features = ["derive"] }
log = "^0.4"
simplelog = "0.12.0"
time = "0.3.11"
ncurses = { version = "5.101", features = ["wide"] }
gtk = "^0.9"
gio = "^0.9"
glib = "^0.10"
gdk = "^0.13"
cairo-rs = { version = "^0.9.1", features = ["png"] }
