[package]
name = "f1-telemetry-display"
version = "0.1.0"
description = "Display telemetry info from F1 games"
authors = ["Mathieu Lemay <acidrain1@gmail.com>"]
edition = "2021"
default-run = "f1-telemetry-display"

[dependencies]
f1-telemetry = { path = "../f1-telemetry" }
f1-telemetry-common = { path = "../f1-telemetry-common" }
tokio = { version = "1", features = ["full"] }
async-trait = "^0.1"
lazy_static = "^1.4.0"
clap = { version = "4.0.4", features = ["derive"] }
log = "^0.4"
simplelog = "0.12.0"
time = "0.3.11"
ncurses = { version = "5.101", features = ["wide"] }
gtk = "0.18.1"
gio = "0.19.2"
glib = "0.19.2"
gdk = "0.18.0"
cairo-rs = { version = "0.18.2", features = ["png"] }
async-channel = "2.2.0"
