[package]
name = "f1-telemetry"
version = "0.3.0"
authors = ["Mathieu Lemay <acidrain1@gmail.com>"]
edition = "2021"

[dependencies]
bincode = "^1.3.3"
serde = { version = "^1.0", features=["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
hex = "0.4"
