[package]
name = "f1-ws-server"
version = "0.1.0"
description = "WebSocket server to relay telemetry packets"
authors = ["Mathieu Lemay <acidrain1@gmail.com>"]
edition = "2021"

[dependencies]
f1-telemetry = { path = "../f1-telemetry" }
f1-telemetry-common = { path = "../f1-telemetry-common" }
clap = { version = "4.0.4", features = ["derive", "env"] }
log = "0.4.17"
simplelog = "0.12.0"
tokio = { version = "1.19.2", features = ["io-std", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.17.1"
futures-util = { version = "0.3.21", features = ["sink", "std"] }
time = "0.3.11"
serde_json = "1.0.81"
